# detectflow-matchnode

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  log4j2.properties  pyproject.toml
app/: main.py
app/config/: logging.py  settings.py
app/connectors/: kafka_sink.py  kafka_source.py
app/domain/filters/: loader.py
app/domain/keying/: strategies.py
app/domain/logsources/: loader.py
app/domain/models/: enriched_sigma.py  exceptions.py
app/domain/rules/: loader.py
app/domain/sigma_matcher/: __init__.py  constants.py  core.py  evaluator.py  field_mapping.py  helpers.py  log.py  sigma_parser.py  utils.py
app/jobs/: sigma_detection.py
app/operators/: sigma_broadcast.py
app/utils/: __init__.py
tests/: test_core.py  test_detection.py  test_field_mapping.py  test_helpers.py  test_logsources_loader.py  test_rules_loader.py  test_settings.py  test_sigma_broadcast_rules_loading.py  test_sigma_parser.py  test_utils.py
